// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index action type factories should export action type factories 1`] = `"@@krf/SET>A SIMPLEOBJECT"`;

exports[`index extended selectors should extends get selector on simpleObject 1`] = `"DATA"`;

exports[`index extended selectors should extends isInitialized selector on simpleObject 1`] = `true`;

exports[`index named factory should instanciate a keyValue reducer (default) 1`] = `"keyValue"`;

exports[`index named factory should instanciate a keyValue reducer (specified) 1`] = `"keyValue"`;

exports[`index named factory should instanciate a simpleObject reducer 1`] = `"simpleObject"`;

exports[`index suffix of simple factory should make a simple array init to empty 1`] = `Array []`;

exports[`index suffix of simple factory should make a simple array init to empty 2`] = `Array []`;

exports[`index suffix of simple factory should make a simple boolean init to false 1`] = `false`;

exports[`index suffix of simple factory should make a simple boolean init to false 2`] = `false`;

exports[`index suffix of simple factory should make a simple object init to empty 1`] = `Object {}`;

exports[`index suffix of simple factory should make a simple object init to empty 2`] = `Object {}`;

exports[`index suffix of simple factory should make a simple object init to empty 3`] = `Object {}`;

exports[`index suffix of simple factory should make a simple string init to blank 1`] = `""`;

exports[`index suffix of simple factory should make a simple string init to blank 2`] = `""`;

exports[`index suffix of simpleObject factory should make a simple object init to empty 1`] = `Object {}`;

exports[`index suffix of simpleObject factory should make a simple string init to blank 1`] = `""`;

exports[`index type validation should be on error [not a middleware object, nor an option object] 1`] = `[Error: parameter is not a middleware configuration, nor a factory option object.]`;

exports[`index type validation should be on error [undefined] 1`] = `[Error: parameter is not a middleware configuration, nor a factory option object.]`;

exports[`index type validation should instanciate a reducer (options as object) 1`] = `"keyValue"`;

exports[`index type validation should instanciate a reducer (options as string -name-) 1`] = `"keyValue"`;

exports[`index with middleware should prefix actions 1`] = `
Object {
  "payload": Object {
    "id": 2,
    "some": "information 2",
  },
  "type": "@@krf/ADD>TODOS",
}
`;

exports[`index with middleware should prefix reducer 1`] = `
Object {
  "array": Array [
    Object {
      "id": 1,
      "some": "information 1",
    },
    Object {
      "id": 2,
      "some": "information 2",
    },
  ],
  "data": Object {
    "1": Object {
      "id": 1,
      "some": "information 1",
    },
    "2": Object {
      "id": 2,
      "some": "information 2",
    },
  },
  "defaultData": undefined,
  "initialized": true,
  "key": "id",
  "keys": Array [
    "1",
    "2",
  ],
  "name": "todos",
  "post1": true,
  "pre1": true,
  "prefix": "",
  "prevCtx": Object {
    "action": Object {
      "payload": 20,
      "pre1": true,
      "type": "@@krf/REMOVE>TODOS",
    },
    "state": Object {
      "array": Array [
        Object {
          "id": 1,
          "some": "information 1",
        },
        Object {
          "id": 2,
          "some": "information 2",
        },
      ],
      "data": Object {
        "1": Object {
          "id": 1,
          "some": "information 1",
        },
        "2": Object {
          "id": 2,
          "some": "information 2",
        },
      },
      "defaultData": undefined,
      "initialized": true,
      "key": "id",
      "keys": Array [
        "1",
        "2",
      ],
      "name": "todos",
      "pre1": true,
      "prefix": "",
      "prevCtx": Object {
        "action": Object {
          "payload": 20,
          "type": "@@krf/REMOVE>TODOS",
        },
        "state": Object {
          "data": Object {
            "1": Object {
              "id": 1,
              "some": "information 1",
            },
            "2": Object {
              "id": 2,
              "some": "information 2",
            },
            "20": Object {
              "id": 20,
              "some": "information 20",
            },
          },
          "initialized": true,
          "keys": Array [
            "1",
            "20",
            "2",
          ],
        },
      },
    },
  },
}
`;

exports[`index with middleware should prefix selectors 1`] = `
Object {
  "1": Object {
    "id": 1,
    "some": "information 1",
  },
  "2": Object {
    "id": 2,
    "some": "information 2",
  },
  "20": Object {
    "id": 20,
    "some": "information 20",
  },
}
`;

exports[`index with name and empty prefix should prefix actions 1`] = `
Object {
  "payload": Object {
    "id": 2,
    "some": "information 2",
  },
  "type": "@@krf/ADD>TODOS",
}
`;

exports[`index with name and empty prefix should prefix reducer 1`] = `
Object {
  "array": Array [
    Object {
      "id": 1,
      "some": "information 1",
    },
    Object {
      "id": 2,
      "some": "information 2",
    },
  ],
  "data": Object {
    "1": Object {
      "id": 1,
      "some": "information 1",
    },
    "2": Object {
      "id": 2,
      "some": "information 2",
    },
  },
  "initialized": true,
  "keys": Array [
    "1",
    "2",
  ],
}
`;

exports[`index with name and empty prefix should prefix selectors 1`] = `
Object {
  "1": Object {
    "id": 1,
    "some": "information 1",
  },
  "2": Object {
    "id": 2,
    "some": "information 2",
  },
  "20": Object {
    "id": 20,
    "some": "information 20",
  },
}
`;

exports[`index with name and key should use custom key 1`] = `
Array [
  "information 7",
  "information 11",
]
`;

exports[`index with name and prefix should prefix actions 1`] = `
Object {
  "payload": Object {
    "id": 2,
    "some": "information 2",
  },
  "type": "@@krf/ADD>UI>TODOS",
}
`;

exports[`index with name and prefix should prefix reducer 1`] = `
Object {
  "array": Array [
    Object {
      "id": 1,
      "some": "information 1",
    },
    Object {
      "id": 2,
      "some": "information 2",
    },
  ],
  "data": Object {
    "1": Object {
      "id": 1,
      "some": "information 1",
    },
    "2": Object {
      "id": 2,
      "some": "information 2",
    },
  },
  "initialized": true,
  "keys": Array [
    "1",
    "2",
  ],
}
`;

exports[`index with name and prefix should prefix selectors 1`] = `
Object {
  "1": Object {
    "id": 1,
    "some": "information 1",
  },
  "2": Object {
    "id": 2,
    "some": "information 2",
  },
  "20": Object {
    "id": 20,
    "some": "information 20",
  },
}
`;

exports[`index with path should prefix actions 1`] = `
Object {
  "payload": Object {
    "id": 2,
    "some": "information 2",
  },
  "type": "@@krf/ADD>TODOS",
}
`;

exports[`index with path should prefix reducer 1`] = `
Object {
  "array": Array [
    Object {
      "id": 1,
      "some": "information 1",
    },
    Object {
      "id": 2,
      "some": "information 2",
    },
  ],
  "data": Object {
    "1": Object {
      "id": 1,
      "some": "information 1",
    },
    "2": Object {
      "id": 2,
      "some": "information 2",
    },
  },
  "initialized": true,
  "keys": Array [
    "1",
    "2",
  ],
}
`;

exports[`index with path should prefix selectors 1`] = `
Object {
  "1": Object {
    "id": 1,
    "some": "information 1",
  },
  "2": Object {
    "id": 2,
    "some": "information 2",
  },
  "20": Object {
    "id": 20,
    "some": "information 20",
  },
}
`;

exports[`index without path should prefix actions 1`] = `
Object {
  "payload": Object {
    "id": 2,
    "some": "information 2",
  },
  "type": "@@krf/ADD>TODOS",
}
`;

exports[`index without path should prefix reducer 1`] = `
Object {
  "array": Array [
    Object {
      "id": 1,
      "some": "information 1",
    },
    Object {
      "id": 2,
      "some": "information 2",
    },
  ],
  "data": Object {
    "1": Object {
      "id": 1,
      "some": "information 1",
    },
    "2": Object {
      "id": 2,
      "some": "information 2",
    },
  },
  "initialized": true,
  "keys": Array [
    "1",
    "2",
  ],
}
`;

exports[`index without path should prefix selectors 1`] = `
Object {
  "1": Object {
    "id": 1,
    "some": "information 1",
  },
  "2": Object {
    "id": 2,
    "some": "information 2",
  },
  "20": Object {
    "id": 20,
    "some": "information 20",
  },
}
`;
